@@ -1,3 +1,9 @@
+2013-08-20  Alan Modra  <amodra@gmail.com>
+
+	PR target/57865
+	* config/rs6000/rs6000.c (rs6000_emit_prologue): Correct ool_adjust.
+	(rs6000_emit_epilogue): Likewise.
+
 2013-08-19  Dehao Chen (dehao@google.com)
 
 	* value-prof.c (gimple_ic): Fix the bug of adding EH edge.
